<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cookbook</string>
    <string name="data_file">data.json</string>
    <string name="welcome">Welcome to the cookbook!</string>
    <string name="action_new_recipe">New Recipe</string>
    <string name="action_save_recipe">Save</string>
    <string name="action_save_recipes">Save Recipes</string>
    <string name="action_save_recipes_confirm">Recipes saved!</string>
    <string name="action_edit_recipe">Edit</string>
    <string name="action_delete_recipe">Delete</string>
    <string name="action_add_ingredient">Add ingredient</string>
    <string name="action_add_step">Add step</string>
    <string name="action_share">Share…</string>

    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>

    <string name="tab_name_recipe">Recipe</string>
    <string name="tab_name_ingredients">Ingredients</string>
    <string name="tab_name_steps">steps</string>

    <string name="step_view_title">Step</string>
    <string name="step_view_ok">OK</string>

    <string name="step_edit_title">Edit Step</string>
    <string name="ingredient_edit_title">Edit Ingredient</string>
    <string name="edit_ok">OK</string>
    <string name="edit_cancel">Cancel</string>

    <string name="delete_dialog_title">Delete recipe : </string>
    <string name="delete_dialog_text">Are you sur to delete this recipe?</string>
    <string name="delete_dialog_step_title">Delete step</string>
    <string name="delete_dialog_step_text">Are you sur to delete this step?</string>
    <string name="delete_dialog_ingredient_title">Delete ingredient</string>
    <string name="delete_dialog_ingredient_text">Are you sur to delete this ingredient?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>

    <string name="new_recipe">New Recipe</string>
    <string name="new_ingredient">New Ingredient</string>
    <string name="new_step">New Step</string>

	<string name="tag_delete">delete</string>
	<string name="tag_step">step</string>
	<string name="tag_edit_ingredient">editIngredient</string>
	<string name="tag_edit_step">editStep</string>

	<string name="tag_data_write">Data write</string>
	<string name="file_write_error">File write failed: </string>
	<string name="tag_data_read">Data read</string>
	<string name="file_read_error">Can not read file: </string>
	<string name="file_read_not_found">File not found: </string>
	<string name="key_recipe">recipe</string>
	<string name="key_position_ingredient">posIngredient</string>
	<string name="key_position_step">posStep</string>

</resources>
