<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cookbook="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_ingredient"
        cookbook:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_ingredient"
        android:visible="false"
        />
     <item
        android:id="@+id/action_add_step"
        cookbook:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_step"
        android:visible="false"
        />
	<item
        android:id="@+id/action_save"
        cookbook:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save_recipe"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        cookbook:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>
